--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native/new-app-screen": "0.80.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-asset": "^2.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
