--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.0",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.20",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-asset": "^2.1.1",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-safe-area-context": "^5.5.0",
+    "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
