--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/drawer": "^7.5.2",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.20",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
