--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-asset": "^2.1.1",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-pager-view": "^6.8.1",
     "react-native-reanimated": "^3.18.0",
